# wasm

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh
src/: main.c
src/wasm/: wasm.c  wasm.h  wasm_common.c  wasm_common.h  wasm_helper.c  wasm_helper.h  wasm_io.c  wasm_io.h  wasm_private.h  wasm_reader.c  wasm_reader.h  wasm_vec.c  wasm_vec.h
src/wasm/private/: wasm_common.c  wasm_common.h  wasm_module.c  wasm_module.h  wasm_reader.c  wasm_reader.h
test/: a.out.js  a.out.wasm  test_program.c
tests/: test.h  tests.c
tests/files/: custom_section.wasm
tests/files/emscripten_1/: TEST.md  a.out.wat
